src/elements/button.css
button {
	border: none;
	border-radius: var(--border-radius);
	background-color: #525252;
	padding: var(--padding);
	font-family: inherit;
	font-size: inherit;
	line-height: inherit;
	color: white;
}

button:enabled {
	box-shadow: inset 0 0 0.125em rgba(255, 255, 255, 0.125);
	cursor: pointer;
}

button:enabled:hover {
	filter: brightness(1.1);
}

button:enabled:active {
	filter: brightness(1);
	box-shadow: inset 0 0 0.125em rgba(0, 0, 0, 0.125);
}

button:disabled {
	opacity: 0.67;
}

button.indigo {
	background-color: #4f46e5;
}

